# brixms

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPS.md  README.md  clippy.toml  deny.toml  rust-toolchain.toml
crates/brix-ast/: Cargo.toml  OWNER.md
crates/brix-ast/src/: ast.rs  diag.rs  fmt.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/brix-ast/tests/: corpus.rs
crates/brix-canon/: Cargo.toml  OWNER.md
crates/brix-canon/src/: decimal.rs  float.rs  int_codec.rs  lib.rs  quantity.rs
crates/brix-canon/tests/: vectors.rs
crates/brix-cli/: Cargo.toml  QUALITY_PROFILES.md  TEST_SCENARIOS.md
crates/brix-cli/src/: args.rs  build.rs  lib.rs  lowering.rs  main.rs  package.rs  publish.rs  quality.rs  scaffold.rs  scenario.rs  test.rs  toolchain.rs
crates/brix-cli/tests/: brix_type_package.rs  build_run_smoke.rs  fn_bodies.rs  graph.rs  graph_cli.rs  multi_file_package.rs  native_typecheck_flag.rs  publish_cli.rs  quality_cli.rs  reproducibility.rs  test_command.rs
crates/brix-conformance/: Cargo.toml
crates/brix-conformance/examples/: probe_uf.rs
crates/brix-conformance/src/: compiled_engine.rs  fixture.rs  lib.rs  oracle_engine.rs  translate.rs  typecorpus.rs  typefacts.rs
crates/brix-conformance/src/fixtures/: edge_identity_domain.rs  entity_key_conflict.rs  matchdigest_supportref.rs  mod.rs  predicate_level_condensation.rs
crates/brix-conformance/tests/: acceptance_corpus.rs  acceptance_coverage.json  authoritative_gate.rs  context_root_invariant.rs  differential.rs  engine_mint.rs  errata.rs  mint_selfhost.rs  selfhost_independence.rs  selfhost_parity.rs  type_parity.rs
crates/brix-conformance/tests/snapshots/: acceptance_corpus__negative_effect_violation_human.snap  acceptance_corpus__negative_effect_violation_json.snap  acceptance_corpus__negative_effect_violation_sarif.snap  acceptance_corpus__negative_impl_coherence_human.snap  acceptance_corpus__negative_impl_coherence_json.snap  acceptance_corpus__negative_impl_coherence_sarif.snap  acceptance_corpus__negative_name_resolution_human.snap  acceptance_corpus__negative_name_resolution_json.snap  acceptance_corpus__negative_name_resolution_sarif.snap  acceptance_corpus__negative_phase_cycle_human.snap  acceptance_corpus__negative_phase_cycle_json.snap  acceptance_corpus__negative_phase_cycle_sarif.snap  acceptance_corpus__negative_syntax_error_human.snap  acceptance_corpus__negative_syntax_error_json.snap  acceptance_corpus__negative_syntax_error_sarif.snap  acceptance_corpus__negative_type_error_human.snap  acceptance_corpus__negative_type_error_json.snap  acceptance_corpus__negative_type_error_sarif.snap  acceptance_corpus__negative_unsupported_decl_human.snap  acceptance_corpus__negative_unsupported_decl_json.snap  acceptance_corpus__negative_unsupported_decl_sarif.snap  errata__errata_0001_entity_key_conflict_rev1.snap  errata__errata_0001_matchdigest_supportref_rev1.snap  errata__errata_0001_matchdigest_supportref_rev2.snap  errata__errata_0002_edge_identity_compatibility_domain_rev1.snap  errata__errata_0002_predicate_level_condensation_rev1.snap
crates/brix-diag/: Cargo.toml
crates/brix-diag/src/: lib.rs
crates/brix-oracle/: Cargo.toml  OWNER.md
crates/brix-oracle/src/: dsl.rs  dump.rs  eval.rs  frontend.rs  identity.rs  lib.rs  phase.rs  program.rs  provenance.rs  row.rs  store.rs  txn.rs  value.rs
crates/brix-oracle/tests/: flagship.rs  settle.rs
crates/brix-oracle/tests/snapshots/: flagship__flagship_revision_1.snap  settle__entity_key_conflict.snap  settle__key_conflict.snap  settle__pricing_masked.snap  settle__reachability.snap  settle__rule_error.snap  settle__txn_revision_1.snap
crates/brix-phase/: Cargo.toml  OWNER.md
crates/brix-phase/src/: input.rs  lib.rs
crates/brix-phase/tests/: phase.rs
crates/brix-rt/: Cargo.toml  OWNER.md
crates/brix-rt/src/: delta.rs  driver_host.rs  engine.rs  graph.rs  ids.rs  lib.rs  mvcc.rs  revlog.rs  scheduler.rs  store.rs  stream.rs  value.rs
crates/brix-rt/tests/: driver_host.rs
crates/brix-rt/tests/fixtures/: http_notify_driver.component.wasm
crates/brix-semantic/: Cargo.toml
crates/brix-semantic/src/: context.rs  dependency.rs  evidence.rs  id.rs  judgement.rs  lib.rs  outcome.rs  proposition.rs
crates/brix-semantic/tests/: judgment_core.rs
crates/brixc/: Cargo.toml  OWNER.md
crates/brixc/src/: cache.rs  emit.rs  incremental.rs  lib.rs  phase.rs  pipeline.rs  plan.rs
crates/brixc/src/emit/: mod.rs  native.rs  project.rs  rust_type.rs  workspace.rs
crates/brixc/src/lower/: decl.rs  diag.rs  expr.rs  mod.rs  package.rs  resolve.rs  schema.rs  stdlib.rs  tymap.rs
crates/brixc/src/selfhost/: extract.rs  mod.rs  native.rs  typefacts.rs
crates/brixc/tests/: emit_flagship.rs  graph_coherence.rs  lower_flagship.rs  lower_package.rs  lower_units.rs  native_typecheck.rs  use_alias.rs
crates/brixc/tests/snapshots/: emit_flagship__flagship_generated_workspace.snap
crates/brixpkg/: Cargo.toml
crates/brixpkg/src/: digest.rs  graph.rs  lib.rs  lock.rs  manifest.rs  registry.rs  resolve.rs  version.rs
sdk/brix-driver-rs/: Cargo.toml
sdk/brix-driver-rs/src/: caps.rs  http_notify.rs  lib.rs  wasm_guest.rs
tools/brix-builder/: .gitignore  README.md  pyproject.toml
tools/brix-builder/data/: README.md
tools/brix-builder/prompts/: coder.md  reviewer.md  system.md  tester.md
tools/brix-builder/scripts/: evaluate-adapter.sh  overnight-loop.sh  run-local.sh  serve-model.sh  train.sh
tools/brix-builder/src/brix_builder/: __init__.py  actions.py  agent.py  cli.py  config.py  model.py  tickets.py  tools.py
tools/brix-builder/tests/: conftest.py  test_actions.py  test_cli_enqueue.py  test_seed_tickets.py  test_team.py  test_ticket_boundaries.py  test_ticket_loop_fixes.py  test_tickets.py  test_tools.py
tools/brix-builder/tickets/seeds/: README.md  approval-workflow-status-query.json  audit-trail-recent-events-query.json  core-id-newtype.json  core-option-helpers.json  math-abs-fn.json  math-float-predicates.json  math-int-extra.json  math-int-float-lib.json  math-sign-float.json  orders-open-query.json  (+3 more)
(+101 files in other folders)
