[package]
name = "brix-ast"
description = "Lexer (logos), hand-written recursive-descent parser, CST, AST, spans, fmt v0."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logos = { workspace = true }
brix-diag = { path = "../brix-diag" }

[lints]
workspace = true
