[package]
name = "brix-canon"
description = "Canonical encoding + identity (App. G). The serialization point; frozen first (G0)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
indexmap = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
