[package]
name = "brix-cli"
description = "new/build/run/repl/test/sim/fmt/why/whynot/explain verbs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "brix"
path = "src/main.rs"

[dependencies]
brixc = { path = "../brixc" }
brixpkg = { path = "../brixpkg" }
camino = { workspace = true }

[lints]
workspace = true
