[package]
name = "brix-conformance"
description = "Fixture format, CONF runner, differential harness, random program generator."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brix-oracle = { path = "../brix-oracle" }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
