[package]
name = "brix-conformance"
description = "Fixture format, CONF runner, differential harness, random program generator."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brix-ir = { path = "../brix-ir" }
brix-oracle = { path = "../brix-oracle" }
brix-rt = { path = "../brix-rt" }

[dev-dependencies]
brix-ast = { path = "../brix-ast" }
brix-cli = { path = "../brix-cli" }
brix-diag = { path = "../brix-diag" }
brix-semantic = { path = "../brix-semantic" }
brixc = { path = "../brixc" }
insta = { workspace = true }

[lints]
workspace = true
