[package]
name = "brix-diag"
description = "Diagnostic types, BRX codes, JSON/SARIF projection."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
