[package]
name = "brix-oracle"
description = "Naive reference evaluator. The semantic authority; frozen at G1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brix-phase = { path = "../brix-phase" }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
