[package]
name = "brix-oracle"
description = "Naive reference evaluator. The semantic authority; frozen at G1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brix-ir = { path = "../brix-ir" }
brix-phase = { path = "../brix-phase" }

[dev-dependencies]
brix-ast = { path = "../brix-ast" }
brixc = { path = "../brixc" }
insta = { workspace = true }

[lints]
workspace = true
