[package]
name = "brix-phase"
description = "Dependency graph, SCC, phase assignment, minimal offending path (App. F)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-diag = { path = "../brix-diag" }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
