[package]
name = "brix-rt"
description = "Runtime: revisions, deltas, provenance, lifecycles, sim clock, WASM host, caps."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace-internal sibling crate (Ring0_Build_Plan.md §0 dependency order:
# brix-rt depends on canon + diag). Not part of the external DEPS.md
# whitelist — that governs third-party crates entering
# [workspace.dependencies], not path deps between crates in this workspace.
brix-canon = { path = "../brix-canon" }

# The wasmtime Driver host (Ring0 §1.7, issue #27) — see DEPS.md. Confined to
# the `driver_host` module (`#[cfg(not(target_arch = "wasm32"))]` in
# `lib.rs`), and target-gated here too: `sdk/brix-driver-rs` depends on this
# crate for the delta-ABI *types* and also compiles to `wasm32-wasip2` (the
# guest side of the same ABI) — wasmtime is a native runtime and cannot be
# part of that build, so it must not be an unconditional dependency.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
