[package]
name = "brix-semantic"
description = "Canonical proof-substrate artifacts (ADR-0001): Context/Proposition/Evidence/Judgement/Dependency identities + the epistemic outcome lattice. Depends only on brix-canon."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
