[package]
name = "brixc"
description = "Compiler pipeline + Rust codegen (quote + prettyplease)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brixpkg = { path = "../brixpkg" }
camino = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
