[package]
name = "brixc"
description = "Compiler pipeline + Rust codegen (quote + prettyplease)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
brix-ast = { path = "../brix-ast" }
brix-diag = { path = "../brix-diag" }
brix-ir = { path = "../brix-ir" }
brix-phase = { path = "../brix-phase" }
brixpkg = { path = "../brixpkg" }
camino = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
