[package]
name = "brixpkg"
description = "Manifest, lockfile, pubgrub resolve, content-addressed local registry."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
brix-canon = { path = "../brix-canon" }
pubgrub = { workspace = true }
camino = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
