[package]
name = "brix-driver-rs"
description = "Rust guest SDK for WASM Drivers (delta ABI + capability imports)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# The guest SDK re-exports the delta-ABI types from brix-rt so guest and host
# cannot drift, and canon-encodes payloads through brix-canon (the one
# serializer). Both are workspace-internal path deps (Ring0_Build_Plan.md §0),
# not third-party whitelist entries.
brix-rt = { path = "../../crates/brix-rt" }
brix-canon = { path = "../../crates/brix-canon" }

[lints]
workspace = true
